# PythonNotifications

./: pyproject.toml  test.py
src/python_notifications.egg-info/: PKG-INFO  SOURCES.txt
